--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 .c-progress-section {
 position: fixed !important;
 bottom: 10px !important;
+	width: auto !important;
+	margin: auto !important;
 
 }
 
