--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
 .c-progress-section {
 position: fixed !important;
 bottom: 10px !important;
+	display: flex !important;
 	width: auto !important;
-	margin: auto !important;
+	margin-left: auto !important;
 
 }
 
