--- a/index.html
+++ b/index.html
@@ -69,8 +69,11 @@
 
       /*Previous Button*/
       .c-forms-form .c-page-previous-page {
+         font-size: 0px !important;
+        margin: 0px !important;
+        padding: 0px !important;
         color: #FFF !important;
-        background-color: #FF0000 !important;
+        background: transparent !important;
         font-weight: bold !important;
         border: 0px !important;
       }
