--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       /*Previous Button*/
       .c-forms-form .c-page-previous-page {
-         font-size: 0px !important;
+      font-size: 0px !important;
         margin: 0px !important;
         padding: 0px !important;
         color: #FFF !important;
@@ -106,7 +106,16 @@
         padding-bottom: 20px !important;
       }
       /*End signature line coding*/
-
+      
+     .c-text-singleline[data-field="T3"] .c-content,
+     .c-text-singleline[data-field="T4"] .c-content,
+     .c-text-singleline[data-field="T6"] .c-content,
+     .c-text-singleline[data-field="T7"] .c-content,
+     .c-text-singleline[data-field="T9"] .c-content,
+     .c-text-singleline[data-field="T10"] .c-content {
+        text-align: center !important;
+      }
+      
       /*Blue borders around entry boxes*/ 
       .c-forms-form input[type=text] {
         padding: 5px !important;
