--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>PAGE TITLE </title>
+    <title>Employee Portal</title>
     <meta name="author" content="Justin Winter">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="robots" content="noindex, nofollow">
@@ -114,6 +114,12 @@
      .c-text-singleline[data-field="T9"] .c-content,
      .c-text-singleline[data-field="T10"] .c-content {
         text-align: center !important;
+      }
+      
+      address {
+      font-size: 12px !important;
+      font-style: normal !important;
+      line-height: 90% !important;
       }
       
       /*Blue borders around entry boxes*/ 
