--- a/index.html
+++ b/index.html
@@ -119,7 +119,12 @@
       address {
       font-size: 12px !important;
       font-style: normal !important;
-      line-height: 90% !important;
+      line-height: 100% !important;
+      }
+      
+      ol {
+	  list-style-type: lower-alpha !important;
+      font-weight: bold !important;
       }
       
       /*Blue borders around entry boxes*/ 
