--- a/index.html
+++ b/index.html
@@ -115,7 +115,18 @@
      .c-text-singleline[data-field="T10"] .c-content {
         text-align: center !important;
       }
-      
+
+.cognito .c-forms-form input[type="radio"]:checked + *:before {
+    background: red !important;
+}
+
+.cognito .c-forms-form input[type="radio"] + *:before {
+    border: solid 0px white !important;
+    border-radius: 0px !important;
+}
+
+  
+   
       address {
       font-size: 12px !important;
       font-style: normal !important;
