--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
     border-radius: 0px !important;
 }
 
-  
+  .c-section .c-title {
+  text-align: center !important;
+  }
    
       address {
       font-size: 12px !important;
