--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
 .cognito .c-forms-form input[type="radio"]:checked + *:before {
     background: red !important;
+    border: solid 0px white !important;   
 }
 
 .cognito .c-forms-form input[type="radio"] + *:before {
