--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
       /*End Hidden Section*/
 
       /*If the form has placeholders to bounce to top of page*/ 
-      .c-text-singleline[data-field="Placeholder"] input[type=text] {
+      .c-text-singleline[data-field="Placeholder1"] input[type=text],
+      .c-text-singleline[data-field="Placeholder1"] input[type=text] {
         font-size: 0px !important;
         padding: 0px !important;
         border: 0px solid #fff !important;
