--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
 
       /*If the form has placeholders to bounce to top of page*/ 
       .c-text-singleline[data-field="Placeholder1"] input[type=text],
-      .c-text-singleline[data-field="Placeholder2"] input[type=text] {
+      .c-text-singleline[data-field="Placeholder2"] input[type=text],
+      .c-text-singleline[data-field="Placeholder3"] input[type=text] {
         font-size: 0px !important;
         padding: 0px !important;
         border: 0px solid #fff !important;
