--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   .c-section .c-title {
   text-align: center !important;
   }
-   
+  
       address {
       font-size: 12px !important;
       font-style: normal !important;
@@ -139,6 +139,12 @@
       ol {
 	  list-style-type: lower-alpha !important;
       font-weight: bold !important;
+      }
+      
+      .c-section[data-field="ContactUs"] h3,
+      .c-section[data-field="ContactUs"] p {
+      margin-bottom: 0px !important;
+      margin-top: 0px !important;
       }
       
       /*Blue borders around entry boxes*/ 
