--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
         margin: 0px !important;
         padding: 0px !important;
       }
-
+	    
+        h6 {
+        font-size: 16px !important;
+	color: red !important;
+	}
+	   
       .cognito .c-page  {
        overflow: hidden !important;
       }
